--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "build.ts"
   ],
   "dependencies": {
+    "@types/multer": "^1.4.7",
     "command-line-args": "^5.2.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
@@ -93,6 +94,7 @@
     "find": "^0.3.0",
     "fs-extra": "^10.1.0",
     "jasmine": "^4.3.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
     "supertest": "^6.2.4",
     "ts-node": "^10.9.1",
